Fixed integration icon background for Night shift
refs. https://github.com/TryGhost/Ghost-Admin/commit/449e3a37aa0409a8cd9eebec7df2398ab1356521

The blending mode used on light theme didn't work for Night shift (made all the icons blend into the dark background).

--- a/ghost/admin/app/styles/app-dark.css
+++ b/ghost/admin/app/styles/app-dark.css
@@ -371,3 +371,7 @@ input:focus,
 .gh-nav-list .gh-nav-nightshift span svg path {
     fill: color-mod(var(--midgrey) l(-5%));
 }
+
+.apps-card-app-icon {
+    mix-blend-mode: normal;
+}
